# buffer-native-profiler

./: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
buffer-profiler/: README.md  build.gradle.kts  settings.gradle.kts
buffer-profiler-bridge/: README.md  build.gradle.kts  settings.gradle.kts
buffer-profiler-bridge/gradle/wrapper/: gradle-wrapper.properties
buffer-profiler-bridge/src/main/kotlin/: NativeBufferMonitor.kt
buffer-profiler-bridge/src/main/kotlin/data/repository/: BufferMonitorRepositoryImpl.kt  BufferRepositoryImpl.kt
buffer-profiler-bridge/src/main/kotlin/data/source/: TrackedBuffer.kt
buffer-profiler-bridge/src/main/kotlin/data/usecase/: CreateBufferUseCaseImpl.kt
buffer-profiler-bridge/src/main/kotlin/di/: BufferModule.kt
buffer-profiler-bridge/src/main/kotlin/domain/entity/: Buffer.kt  BufferEntry.kt
buffer-profiler-bridge/src/main/kotlin/domain/repository/: BufferMonitorRepository.kt  BufferRepository.kt
buffer-profiler-bridge/src/main/kotlin/domain/usecase/: CreateBufferUseCase.kt
buffer-profiler-bridge/src/test/kotlin/: BufferConcurrencyTest.kt  MemoryTrackingTest.kt  NativeBufferMonitorTest.kt  TimestampPrecisionTest.kt
buffer-profiler/src/main/cpp/: CMakeLists.txt  buffer_tracking.cpp  buffer_tracking.h  jvmti_agent.cpp  jvmti_agent.h  main.cpp  main.h  memory_tracking.cpp  memory_tracking.h  suspension_tracking.cpp  suspension_tracking.h  utils.cpp  utils.h
react-app/: index.html  package-lock.json  package.json  tailwind.config.js
react-app/public/: theme-script.js
react-app/src/: App.tsx  index.css  main.tsx
react-app/src/components/backpressure/: Backpressure.tsx  PressureGauge.tsx
react-app/src/components/buffer/: BufferContainer.tsx  BufferFlow.tsx  Consumer.tsx  Producer.tsx
react-app/src/components/header/: Header.tsx
react-app/src/components/memory/: Memory.tsx  MemoryChart.tsx
react-app/src/components/output/: OutputLog.tsx
react-app/src/components/stats/: BatchConfig.tsx  StatCard.tsx  Stats.tsx  StatsDisplay.tsx  utils.ts
react-app/src/components/theme/: ThemeInitializer.tsx  ThemeSwitcher.tsx
react-app/src/store/: index.ts  store.ts
react-app/src/store/middleware/: websocketMiddleware.ts
react-app/src/store/slices/: backpressureSlice.ts  bufferFlowSlice.ts  memorySlice.ts  outputLogSlice.ts  sessionSlice.ts  statsSlice.ts  websocketSlice.ts
simulation-server/: Dockerfile  README.md  build.gradle.kts  render.yaml  settings.gradle.kts
simulation-server/gradle/wrapper/: gradle-wrapper.properties
simulation-server/src/main/kotlin/: Main.kt
simulation-server/src/main/kotlin/di/: AppModule.kt
simulation-server/src/main/kotlin/server/: BufferWebSocketServer.kt
simulation-server/src/main/resources/static/: index.html
(+26 files in other folders)
